unpackaged/main/default/objects/WorkOrder/fields/BS11_Camera_Tampering__c.field-meta.xml
<CustomField>
    <fullName>BS11_Camera_Tampering__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Camera Tempering/ Camera Not working Alert alert</inlineHelpText>
    <label>Camera Tempering/ Cam Not Wkng Alert</label>
    <type>Checkbox</type>
</CustomField>