unpackaged/main/default/objects/WorkOrder/fields/BS12_Storage_HDD_full_Video_loss__c.field-meta.xml
<CustomField>
    <fullName>BS12_Storage_HDD_full_Video_loss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Storage (HDD full, Video loss) alert</label>
    <type>Checkbox</type>
</CustomField>