unpackaged/main/default/objects/WorkOrder/fields/BS13_Video_Live_streaming__c.field-meta.xml
<CustomField>
    <fullName>BS13_Video_Live_streaming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video Live streaming/Historical Playback</label>
    <type>Checkbox</type>
</CustomField>