unpackaged/main/default/objects/WorkOrder/fields/ETI_3Pcs_Int_Ip_Camera_quetion3__c.field-meta.xml
<CustomField>
    <fullName>ETI_3Pcs_Int_Ip_Camera_quetion3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Siren cams works by covering each cam</label>
    <type>Checkbox</type>
</CustomField>