unpackaged/main/default/objects/WorkOrder/fields/ETI_4Pcs_Ext_Ip_Camera_quetion1__c.field-meta.xml
<CustomField>
    <fullName>ETI_4Pcs_Ext_Ip_Camera_quetion1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make sure 4 cams available &amp; installed</label>
    <type>Checkbox</type>
</CustomField>