unpackaged/main/default/objects/WorkOrder/fields/ETI_4Pcs_Ext_Ip_Camera_quetion3__c.field-meta.xml
<CustomField>
    <fullName>ETI_4Pcs_Ext_Ip_Camera_quetion3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4 camera images appear on home screen</label>
    <type>Checkbox</type>
</CustomField>