unpackaged/main/default/objects/WorkOrder/fields/ETI_AMAN_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>ETI_AMAN_Receipt_Number__c</fullName>
    <description>Captures AMAN Receipt number - when Inspection status is Pass/ Fail.
Without this receipt no. Inspection status won&#39;t synch to AMAN System.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AMAN Receipt Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>