unpackaged/main/default/objects/WorkOrder/fields/ETI_bs_quetion10__c.field-meta.xml
<CustomField>
    <fullName>ETI_bs_quetion10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver Seatbelt Alert</label>
    <type>Checkbox</type>
</CustomField>