unpackaged/main/default/objects/WorkOrder/fields/ETI_bs_quetion3__c.field-meta.xml
<CustomField>
    <fullName>ETI_bs_quetion3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overspeed alert for Bus Speed limit</label>
    <type>Checkbox</type>
</CustomField>