unpackaged/main/default/objects/WorkOrder/fields/ETI_bs_quetion4__c.field-meta.xml
<CustomField>
    <fullName>ETI_bs_quetion4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Harsh break alert</label>
    <type>Checkbox</type>
</CustomField>