unpackaged/main/default/objects/WorkOrder/fields/ETI_CCB_quetion1__c.field-meta.xml
<CustomField>
    <fullName>ETI_CCB_quetion1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make sure device installed and Placed</label>
    <type>Checkbox</type>
</CustomField>