unpackaged/main/default/objects/WorkOrder/fields/ETI_CDS_quetion3__c.field-meta.xml
<CustomField>
    <fullName>ETI_CDS_quetion3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M sensor active if child check Pressed</label>
    <type>Checkbox</type>
</CustomField>