unpackaged/main/default/objects/WorkOrder/fields/ETI_CDS_quetion6__c.field-meta.xml
<CustomField>
    <fullName>ETI_CDS_quetion6__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal and the ext siren operating</label>
    <type>Checkbox</type>
</CustomField>