unpackaged/main/default/objects/WorkOrder/fields/ETI_CDS_quetion7__c.field-meta.xml
<CustomField>
    <fullName>ETI_CDS_quetion7__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn the engine on sensor should be off</label>
    <type>Checkbox</type>
</CustomField>