unpackaged/main/default/objects/WorkOrder/fields/ETI_Electronic_dest_board_quetion1__c.field-meta.xml
<CustomField>
    <fullName>ETI_Electronic_dest_board_quetion1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electric board is available</label>
    <type>Checkbox</type>
</CustomField>