unpackaged/main/default/objects/WorkOrder/fields/ETI_Electronic_dest_board_quetion2__c.field-meta.xml
<CustomField>
    <fullName>ETI_Electronic_dest_board_quetion2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board is in correct place on top front</label>
    <type>Checkbox</type>
</CustomField>