unpackaged/main/default/objects/WorkOrder/fields/ETI_Electronic_dest_board_quetion3__c.field-meta.xml
<CustomField>
    <fullName>ETI_Electronic_dest_board_quetion3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic board is working and lighting</label>
    <type>Checkbox</type>
</CustomField>