unpackaged/main/default/objects/WorkOrder/fields/ETI_Inspection_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>ETI_Inspection_Date_and_Time__c</fullName>
    <formula>StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Date and Time</label>
    <type>DateTime</type>
</CustomField>