unpackaged/main/default/objects/WorkOrder/fields/ETI_Internal_Siren_quetion1__c.field-meta.xml
<CustomField>
    <fullName>ETI_Internal_Siren_quetion1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make sure device available &amp; installed</label>
    <type>Checkbox</type>
</CustomField>