unpackaged/main/default/objects/WorkOrder/fields/ETI_Internal_Siren_quetion4__c.field-meta.xml
<CustomField>
    <fullName>ETI_Internal_Siren_quetion4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alarm working if emergncy button Pressed</label>
    <type>Checkbox</type>
</CustomField>