unpackaged/main/default/objects/WorkOrder/fields/ETI_issSyncedToAman__c.field-meta.xml
<CustomField>
    <fullName>ETI_issSyncedToAman__c</fullName>
    <defaultValue>false</defaultValue>
    <label>issSyncedToAman</label>
    <type>Checkbox</type>
</CustomField>