unpackaged/main/default/objects/WorkOrder/fields/ETI_LM7_quetion2__c.field-meta.xml
<CustomField>
    <fullName>ETI_LM7_quetion2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placed at driver on front plate of bus</label>
    <type>Checkbox</type>
</CustomField>