unpackaged/main/default/objects/WorkOrder/fields/ETI_LM7_quetion3__c.field-meta.xml
<CustomField>
    <fullName>ETI_LM7_quetion3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4 external cameras appear on main screen</label>
    <type>Checkbox</type>
</CustomField>