unpackaged/main/default/objects/WorkOrder/fields/ETI_LM7_quetion4__c.field-meta.xml
<CustomField>
    <fullName>ETI_LM7_quetion4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Show mode of cams &amp; check Live</label>
    <type>Checkbox</type>
</CustomField>