unpackaged/main/default/objects/WorkOrder/fields/ETI_MDVR_HDD_2TB_quetion1__c.field-meta.xml
<CustomField>
    <fullName>ETI_MDVR_HDD_2TB_quetion1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Device available and installed</label>
    <type>Checkbox</type>
</CustomField>