unpackaged/main/default/objects/WorkOrder/fields/ETI_MDVR_HDD_2TB_quetion2__c.field-meta.xml
<CustomField>
    <fullName>ETI_MDVR_HDD_2TB_quetion2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>There behind driver&#39;s seat above luggage</label>
    <type>Checkbox</type>
</CustomField>