unpackaged/main/default/objects/WorkOrder/fields/ETI_MDVR_HDD_2TB_quetion3__c.field-meta.xml
<CustomField>
    <fullName>ETI_MDVR_HDD_2TB_quetion3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ensure that is properly installed in small buses / coaster only (under the front seat, right of the driver)</inlineHelpText>
    <label>Check Properly installed in Small bus</label>
    <type>Checkbox</type>
</CustomField>