unpackaged/main/default/objects/WorkOrder/fields/ETI_PB_quetion2__c.field-meta.xml
<CustomField>
    <fullName>ETI_PB_quetion2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ensure it is properly and firmly in Plac</label>
    <type>Checkbox</type>
</CustomField>