unpackaged/main/default/objects/WorkOrder/fields/ETI_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ETI_Phone_Number__c</fullName>
    <formula>IF( !ISBLANK( ContactId ) ,   Contact.MobilePhone  , &#39;No Mobile Number&#39;)</formula>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>