unpackaged/main/default/objects/WorkOrder/fields/ETI_Schedule_Appointment__c.field-meta.xml
<CustomField>
    <fullName>ETI_Schedule_Appointment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field controls - whether to Auto Assign this appointment to Available Resource based on Scheduling Policy.</description>
    <label>Schedule Appointment</label>
    <type>Checkbox</type>
</CustomField>