unpackaged/main/default/objects/WorkOrder/fields/ETI_School_Name__c.field-meta.xml
<CustomField>
    <fullName>ETI_School_Name__c</fullName>
    <formula>Account.Name</formula>
    <label>School Name</label>
    <type>Text</type>
</CustomField>