unpackaged/main/default/objects/WorkOrder/fields/ETI_Stop_Arm_quetion1__c.field-meta.xml
<CustomField>
    <fullName>ETI_Stop_Arm_quetion1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop arm is installed on the bus</label>
    <type>Checkbox</type>
</CustomField>