unpackaged/main/default/objects/WorkOrder/fields/ETI_Stop_Arm_quetion2__c.field-meta.xml
<CustomField>
    <fullName>ETI_Stop_Arm_quetion2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>stop Arm working manually</label>
    <type>Checkbox</type>
</CustomField>