unpackaged/main/default/objects/WorkOrder/fields/ETI_Stop_Arm_quetion4__c.field-meta.xml
<CustomField>
    <fullName>ETI_Stop_Arm_quetion4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Red lights turned on when arm open</label>
    <type>Checkbox</type>
</CustomField>