unpackaged/main/default/objects/WorkOrder/fields/ETI_Temp_Hum_Sensor_quetion1__c.field-meta.xml
<CustomField>
    <fullName>ETI_Temp_Hum_Sensor_quetion1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Devise is out of reach of students</label>
    <type>Checkbox</type>
</CustomField>