unpackaged/main/default/objects/WorkOrder/fields/ETI_Temp_Hum_Sensor_quetion2__c.field-meta.xml
<CustomField>
    <fullName>ETI_Temp_Hum_Sensor_quetion2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Device displays temp &amp; humidity</label>
    <type>Checkbox</type>
</CustomField>