unpackaged/main/default/objects/WorkOrder/fields/ETT_Customer_Agreed_Price__c.field-meta.xml
<CustomField>
    <fullName>ETT_Customer_Agreed_Price__c</fullName>
    <label>Customer Agreed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>