unpackaged/main/default/objects/WorkOrder/fields/ETT_Customer_Requested_Tread_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_Customer_Requested_Tread_Pattern__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Requested Tread Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>