unpackaged/main/default/objects/WorkOrder/fields/ETT_No_of_Tyres_accepted__c.field-meta.xml
<CustomField>
    <fullName>ETT_No_of_Tyres_accepted__c</fullName>
    <label>No of Tyres accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>