unpackaged/main/default/objects/WorkOrder/fields/ETT_Number_Of_Tyres__c.field-meta.xml
<CustomField>
    <fullName>ETT_Number_Of_Tyres__c</fullName>
    <label>Number Of Tyres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>