unpackaged/main/default/objects/WorkOrder/fields/ETT_Process__c.field-meta.xml
<CustomField>
    <fullName>ETT_Process__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Procure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>