unpackaged/main/default/objects/WorkOrder/fields/ETT_Tyre_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Type__c</fullName>
    <label>Tyre Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>