unpackaged/main/default/objects/WorkOrder/fields/Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Status__c</fullName>
    <label>Inspection Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>