unpackaged/main/default/objects/WorkOrder/fields/Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Message</label>
    <type>TextArea</type>
</CustomField>