unpackaged/main/default/objects/WorkOrder/fields/MNVR_Serial_Number_is_Matched__c.field-meta.xml
<CustomField>
    <fullName>MNVR_Serial_Number_is_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MNVR Serial Number is Matched?</label>
    <type>Checkbox</type>
</CustomField>