unpackaged/main/default/objects/WorkOrder/fields/question10__c.field-meta.xml
<CustomField>
    <fullName>question10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lcd Monitor installed</label>
    <type>Checkbox</type>
</CustomField>