unpackaged/main/default/objects/WorkOrder/fields/question11__c.field-meta.xml
<CustomField>
    <fullName>question11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make Sure Device alarm working</label>
    <type>Checkbox</type>
</CustomField>