unpackaged/main/default/objects/WorkOrder/fields/question12__c.field-meta.xml
<CustomField>
    <fullName>question12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panic Button</label>
    <type>Checkbox</type>
</CustomField>