unpackaged/main/default/objects/WorkOrder/recordTypes/ETT_Tyre_Cash_Supplier.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Cash_Supplier</fullName>
    <active>true</active>
    <description>ET Tyre Work Order for Cash Supplier</description>
    <label>Tyre - Cash Supplier</label>
</RecordType>