unpackaged/main/default/objects/WorkOrder/recordTypes/ETT_Tyre_Credit_B2B_Supplier.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Credit_B2B_Supplier</fullName>
    <active>true</active>
    <description>ET Tyre Work Order for B2B Supplier</description>
    <label>Tyre - Credit/B2B Supplier</label>
</RecordType>