unpackaged/main/default/objects/WorkOrder/recordTypes/ETT_Tyre_Internal.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Internal</fullName>
    <active>true</active>
    <description>ET Tyre Work Order for Tyre Internal</description>
    <label>Tyre - Internal</label>
</RecordType>