unpackaged/main/default/objects/WorkOrder/recordTypes/Inspection_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Inspection_Work_Order</fullName>
    <active>true</active>
    <description>Record Type used for Inspection</description>
    <label>Inspection Work Order</label>
</RecordType>