unpackaged/main/default/objects/WorkOrder/validationRules/Cannot_Complete_Request_without_Acceptin.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Complete_Request_without_Acceptin</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName =&#39;Inspection_Work_Order&#39; &amp;&amp; 
text(Status ) = &#39;Scheduled&#39; &amp;&amp;  ETI_Inspection_Completed__c = true</errorConditionFormula>
    <errorDisplayField>ETI_3Pcs_Int_Ip_Camera_quetion1__c</errorDisplayField>
    <errorMessage>Please Accept the Appointment before doing the Inspection.</errorMessage>
</ValidationRule>