unpackaged/main/default/objects/WorkOrder/validationRules/Cannot_Inspect_Completed_appointments.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Inspect_Completed_appointments</fullName>
    <active>false</active>
    <description>Completed Appointments Should not be Completed Again.</description>
    <errorConditionFormula>RecordType.DeveloperName =&#39;Inspection_Work_Order&#39; &amp;&amp; 
 PRIORVALUE(ETI_Inspection_Completed__c) = true &amp;&amp;  ETI_Inspection_Completed__c = true</errorConditionFormula>
    <errorMessage>Cannot do any operations on Completed Appointments</errorMessage>
</ValidationRule>