unpackaged/main/default/objects/WorkOrder/validationRules/Cannot_Inspect_Rejected_appointments.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Inspect_Rejected_appointments</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName =&#39;Inspection_Work_Order&#39; &amp;&amp; 
text(Status ) = &#39;None&#39; &amp;&amp;  ETI_Inspection_Completed__c = true</errorConditionFormula>
    <errorMessage>Cannot do any operations on Rejected Appointments</errorMessage>
</ValidationRule>