unpackaged/main/default/objects/WorkOrder/listViews/ETI_Inspection_Work_Orders_Canceled.listView-meta.xml
<ListView>
    <fullName>ETI_Inspection_Work_Orders_Canceled</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>ServiceTerritory</columns>
    <columns>StartDate</columns>
    <columns>Status</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.Inspection_Work_Order</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Completed,Closed</value>
    </filters>
    <label>Inspection Work Orders - Canceled</label>
    <sharedTo>
        <group>ETI_Inspection_FSL_Admins</group>
    </sharedTo>
</ListView>