unpackaged/main/default/objects/WorkOrder/listViews/ETI_Unscheduled_Workorders.listView-meta.xml
<ListView>
    <fullName>ETI_Unscheduled_Workorders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New,None</value>
    </filters>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.Inspection_Work_Order</value>
    </filters>
    <label>Inspection Unscheduled Workorders</label>
</ListView>