unpackaged/main/default/objects/WorkOrder/listViews/Inspection_Work_Orders.listView-meta.xml
<ListView>
    <fullName>Inspection_Work_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>ServiceTerritory</columns>
    <columns>StartDate</columns>
    <columns>Status</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.Inspection_Work_Order</value>
    </filters>
    <label>Inspection Work Orders - All</label>
</ListView>