unpackaged/main/default/objects/WorkOrder/listViews/Inspection_Work_Orders_Closed.listView-meta.xml
<ListView>
    <fullName>Inspection_Work_Orders_Closed</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>StartDate</columns>
    <columns>ServiceTerritory</columns>
    <columns>Status</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.Inspection_Work_Order</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Completed,Closed</value>
    </filters>
    <label>Inspection Work Orders - Closed</label>
</ListView>